--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@react-google-maps/api": "^2.20.5",
     "@supabase/supabase-js": "^2.48.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "axios": "^1.7.9",
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1"
+    "postcss": "^8.5.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
